--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "contentful": "^7.5.0",
+    "react-scripts": "3.0.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
